Added projects listing to homepage.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel= 'stylesheet' href="styles/main.css" type="text/css"/>
+		<title> Vincent Dai Chan - Software Developer </title>
+	</head>
+
+	<body>
+		<p4>
+			Hey there, I'm a Computer Science student at UOIT
+		</p4>
+
+		<h4> Projects </h4>
+			<ul> Github Pages </ul>
+			<ul> Interval Timer (For Web and Android)
+			<ul> Fitness Diary </ul>
+	</body>
+
+</html>
+
